# FlexibleManufacturingCell

./: .gitignore  README  README.md
doc/: Architecture.html  ClassDiagrams.html  ClosingRemarks.html  Glossary.html  NonFuncReqs.html  ProblemStatement.html  ProcessDescriptions.html  ResourceAllocation.html  SupplementarySpecification.html  TimeAllocation.html  UseCaseModel.html  index.html
src/: Makefile.am  configure.ac  mkinstalldirs
src/ControlSystem/: BarcodeReader.c  BarcodeReader.h  BlankBuffer.c  BlankBuffer.h  BlankToDepositThd.c  BlankToDepositThd.h  BlankToUnitThd.c  BlankToUnitThd.h  ControlSystem  CraneController.c  CraneController.h  FeedbeltArrivalThd.c  FeedbeltArrivalThd.h  Item.java  Item1  Item2  Item5  Makefile.am  ProcessingUnit.h  ProcessingUnitController.c  ProcessingUnitController.h  ProcessingUnitThd.c  ProcessingUnitThd.h  SensorData.c  SensorData.h  SensorPollThread.c  SensorPollThread.h  blank.h  main.c
src/FlexInterfaceC/: Makefile.am  Makefile.old  README  flexInterface.c  flexInterface.h  flexInterfaceControl.h  flexTime.c  flexTime.h  start  testControl  testControl.c
src/FlexibleCell/: Belt.java  Code.java  CodeFrame.java  CodeSensor.java  ControlSystem  GrObject.java  Interface.java  Item1  Item2  Item3  Item6  JavaSim.java  Mark.java  Portal.java  PortalArm.java  PositionMatrix.java  Queue.java  README  Sensor.java  SetupDialog.java  SimErrorException.java  SimState.java  Station.java  TestItem.java  TransBelt.java  TranslationMatrix.java  WorkItem.java  WorkStation.java  config.java  simin  start  test.tst  vgear.java
